config/prow/cluster/external-secrets-eso/cert-controller-deployment.yaml
---
# Source: external-secrets/templates/cert-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-eso-cert-controller
  namespace: "default"
  labels:
    helm.sh/chart: external-secrets-0.6.1
    app.kubernetes.io/name: external-secrets-cert-controller
    app.kubernetes.io/instance: external-secrets-eso
    app.kubernetes.io/version: "v0.6.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
      app.kubernetes.io/instance: external-secrets-eso
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets-cert-controller
        app.kubernetes.io/instance: external-secrets-eso
    spec:
      serviceAccountName: external-secrets-cert-controller
      containers:
        - name: cert-controller
          image: "ghcr.io/external-secrets/external-secrets:v0.6.1"
          imagePullPolicy: IfNotPresent
          args:
          - certcontroller
          - --crd-requeue-interval=5m
          - --service-name=external-secrets-eso-webhook
          - --service-namespace=default
          - --secret-name=external-secrets-eso-webhook
          - --secret-namespace=default
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
