config/prow/cluster/external-secrets-eso/webhook-deployment.yaml
---
# Source: external-secrets/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-eso-webhook
  namespace: "default"
  labels:
    helm.sh/chart: external-secrets-0.6.1
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: external-secrets-eso
    app.kubernetes.io/version: "v0.6.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
      app.kubernetes.io/instance: external-secrets-eso
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-secrets-webhook
        app.kubernetes.io/instance: external-secrets-eso
    spec:
      hostNetwork: false
      serviceAccountName: external-secrets-webhook
      containers:
        - name: webhook
          image: "ghcr.io/external-secrets/external-secrets:v0.6.1"
          imagePullPolicy: IfNotPresent
          args:
          - webhook
          - --port=10250
          - --dns-name=external-secrets-eso-webhook.default.svc
          - --cert-dir=/tmp/certs
          - --check-interval=5m
          - --healthz-addr=:8081
          ports:
            - containerPort: 8080
              protocol: TCP
              name: metrics
            - containerPort: 10250
              protocol: TCP
              name: webhook
          readinessProbe:
            httpGet:
              port: 8081
              path: /readyz
            initialDelaySeconds: 20
            periodSeconds: 5
          volumeMounts:
            - name: certs
              mountPath: /tmp/certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: external-secrets-eso-webhook
